[project]
name = "inference-opt"
version = "1.0.0"
description = "Inference throughput optimization helix for causal language models"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.0.0",
    "helices>=0.1.0",
    "rich>=14.0.0",
    "torch==2.9.1",
    "transformers>=5.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
